// This file was sourced from https://github.com/modularcloud/explorer/blob/9b0a8420c427b5c4d34f99807b7bef4593d15510/packages/service-manager/proto/celestia.proto

syntax = "proto3";

// MsgPayForBlobs pays for the inclusion of a blob in the block.
message MsgPayForBlobs {
  string signer = 1;
  // namespaces is a list of namespaces that the blobs are associated with. A
  // namespace is a byte slice of length 33 where the first byte is the
  // namespaceVersion and the subsequent 32 bytes are the namespaceId.
  repeated bytes namespaces = 2;
  repeated uint32 blob_sizes = 3;
  // share_commitments is a list of share commitments (one per blob).
  repeated bytes share_commitments = 4;
  // share_versions are the versions of the share format that the blobs
  // associated with this message should use when included in a block. The
  // share_versions specified must match the share_versions used to generate the
  // share_commitment in this message.
  repeated uint32 share_versions = 8;
}

message IndexWrapper {
  bytes           tx            = 1;
  repeated uint32 share_indexes = 2;
  string          type_id       = 3;
}

// Needed for Mocha
message MalleatedTx {
    bytes original_tx_hash = 1;
    bytes tx = 2;
}

// Blob (named after binary large object) is a chunk of data submitted by a user
// to be published to the Celestia blockchain. The data of a Blob is published
// to a namespace and is encoded into shares based on the format specified by
// share_version.
message Blob {
  bytes  namespace_id      = 1;
  bytes  data              = 2;
  uint32 share_version     = 3;
  uint32 namespace_version = 4;
}


// BlobTx wraps an encoded sdk.Tx with a second field to contain blobs of data.
// The raw bytes of the blobs are not signed over, instead we verify each blob
// using the relevant MsgPayForBlobs that is signed over in the encoded sdk.Tx.
message BlobTx {
  bytes         tx      = 1;
  repeated Blob blobs   = 2;
  string        type_id = 3;
}


protoc \
  --plugin=protoc-gen-ts=../../node_modules/.bin/protoc-gen-ts_proto \
  --ts_out=src/utils \
  ./protos/celestia.proto
